[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "SpectrePDF"
version = "0.2.1"
authors = [
  { name="Udbhav Ram", email="udbhavram41@gmail.com" },
]
description = "A tool for processing and redacting PDFs based on target words using OCR."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["pdf", "redaction", "ocr", "security", "privacy", "text extraction"]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/udiram/SpectrePDF/"
Issues = "https://github.com/udiram/SpectrePDF/issues"

[tool.setuptools]
packages = ["spectrepdf"]